<resources>
    <string name="app_name">ScoreCrunch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_icon_desc">app icon</string>
    <string name="loading_text">Loading...</string>
    <string name="competition_icon_desc">Competition icon</string>
    <string name="some_competition_text">Some competition</string>
    <string name="home_team_icon_text">Home team icon</string>
    <string name="home_team_text">Home team</string>
    <string name="away_team_text">Away team</string>
    <string name="score_placeholder">%d-%d</string>
    <string name="date_placeholder">28 June 19:00</string>
    <string name="minute_placeholder">LIVE</string>
    <string name="paused_text">Paused</string>
    <string name="competition_name">Some competition</string>
    <string name="away_team_icon_text">Away team icon</string>
    <string name="stage_text">Last 16</string>
    <string name="match_result_placeholder">%s win %s</string>
</resources>