<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="?colorTertiary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/home_team_crest"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginVertical="48dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_team_name"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/home_team_icon_text"/>

    <TextView
        android:id="@+id/home_team_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="8dp"
        android:breakStrategy="balanced"
        android:textAlignment="textStart"
        android:fontFamily="@font/firacode_medium"
        android:textColor="?colorAccent"
        android:textSize="16sp"
        android:text="@string/home_team_text"
        app:layout_constraintTop_toBottomOf="@id/home_team_crest"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/live_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="16dp"
        android:textAlignment="center"
        android:fontFamily="@font/firacode_bold"
        android:textColor="@color/green"
        android:textSize="14sp"
        android:text="@string/minute_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_team_crest"
        app:layout_constraintEnd_toStartOf="@id/away_team_crest"/>

    <TextView
        android:id="@+id/match_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="16dp"
        android:textAlignment="center"
        android:fontFamily="@font/firacode_bold"
        android:textColor="?colorSecondaryVariant"
        android:textSize="14sp"
        android:text="@string/paused_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_team_crest"
        app:layout_constraintEnd_toStartOf="@id/away_team_crest"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="64dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/firacode_bold"
        android:textColor="?colorPrimaryVariant"
        android:textSize="32sp"
        android:text="@string/score_placeholder"
        app:layout_constraintStart_toEndOf="@id/home_team_crest"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/away_team_crest"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="80dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/firacode_bold"
        android:textColor="?colorSecondaryVariant"
        android:textSize="14sp"
        android:text="@string/date_placeholder"
        app:layout_constraintStart_toEndOf="@id/home_team_crest"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/away_team_crest"/>

    <TextView
        android:id="@+id/away_team_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="8dp"
        android:breakStrategy="balanced"
        android:textAlignment="textEnd"
        android:fontFamily="@font/firacode_medium"
        android:textColor="?colorAccent"
        android:textSize="16sp"
        android:text="@string/away_team_text"
        app:layout_constraintTop_toBottomOf="@id/away_team_crest"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/away_team_crest"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginVertical="48dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/away_team_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/away_team_icon_text"/>

    <LinearLayout
        android:id="@+id/competition_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="24dp"
        android:padding="8dp"
        android:orientation="horizontal"
        android:background="@drawable/match_details_background"
        app:layout_constraintTop_toBottomOf="@id/home_team_name">

        <TextView
            android:id="@+id/competition_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:layout_gravity="center"
            android:breakStrategy="balanced"
            android:textAlignment="center"
            android:fontFamily="@font/firacode_bold"
            android:textColor="?colorAccent"
            android:textSize="14sp"
            android:text="@string/competition_name"/>

        <ImageView
            android:id="@+id/competition_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:contentDescription="@string/competition_icon_desc"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:padding="8dp"
        android:orientation="vertical"
        android:background="@drawable/match_details_background"
        app:layout_constraintTop_toBottomOf="@id/competition_card">

        <TextView
            android:id="@+id/stage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_gravity="center"
            android:breakStrategy="balanced"
            android:textAlignment="center"
            android:fontFamily="@font/firacode_bold"
            android:textColor="?colorAccent"
            android:textSize="14sp"
            android:text="@string/stage_text"/>

        <TextView
            android:id="@+id/match_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_gravity="center"
            android:breakStrategy="balanced"
            android:textAlignment="center"
            android:fontFamily="@font/firacode_medium"
            android:textColor="?colorSecondaryVariant"
            android:textSize="12sp"
            android:text="@string/match_result_placeholder"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>